--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
-inkwell_internals = "0.7.0"
+cranelift = "0.92.0"
+cranelift-jit = "0.92.0"
+cranelift-module = "0.92.0"
 pest = "2.5.4"
 pest_derive = "2.5.4"
