--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,9 @@ edition = "2021"
 cranelift = "0.92.0"
 cranelift-jit = "0.92.0"
 cranelift-module = "0.92.0"
+inkwell = { version = "0.1.0", features = ["llvm13-0"] }
 pest = "2.5.4"
 pest_derive = "2.5.4"
+qbe = "2.1.0"
+
+[examples]
