--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 enum_dispatch = "0.3.11"
 inkwell = { version = "0.1.0", features = ["llvm13-0"] }
+llvm-sys = "130.0.1"
 pest = "2.5.4"
 pest_derive = "2.5.4"
 
