--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.1.6", features = ["derive"] }
 inkwell = { version = "0.1.0", features = ["llvm13-0"] }
 pest = "2.5.4"
 pest_derive = "2.5.4"
