--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,9 @@ clap = { version = "4.1.6", features = ["derive"] }
 inkwell = { version = "0.1.0", features = ["llvm13-0"] }
 pest = "2.5.4"
 pest_derive = "2.5.4"
+
+[dev-dependencies]
+lazy_static = "1.4.0"
+regex = "1.7.1"
+
+
